--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         <header>
             <h1>Welcome to My Website</h1>
             <p>This is the main index page. Use the links below to navigate the site.</p>
+            
         </header>
 
         <nav>
             <ul>
+                <li><a href="management/estimation_time.html">Time Estimation</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
