--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <nav>
             <ul>
                 <li><a href="management/estimation_time.html">Time Estimation</a></li>
+                <li><a href="management/article_time_estimation.html">Article on Time Estimation</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
