--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <ul>
                 <li><a href="management/estimation_time.html">Time Estimation</a></li>
                 <li><a href="management/article_time_estimation.html">Article on Time Estimation</a></li>
+                <li><a href="software/index.html">Software System</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
