--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
         <nav>
             <ul>
+                <li><a href="management/index.html">Management Lessons</a></li>
                 <li><a href="management/estimation_time.html">Time Estimation</a></li>
                 <li><a href="management/article_time_estimation.html">Article on Time Estimation</a></li>
                 <li><a href="software/index.html">Software System</a></li>
