--- a/index.html
+++ b/index.html
@@ -3,85 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Learning From Building Systems - Homepage</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Inter', sans-serif;
         }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+        .card {
+            background-color: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
         }
-        h1 {
-            color: #2c3e50;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 2rem 0;
-        }
-        nav li {
-            display: inline-block;
-            margin: 0 15px;
-        }
-        nav a {
-            text-decoration: none;
-            color: #3498db;
-            font-weight: bold;
-            font-size: 1.1rem;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #2980b9;
-        }
-        footer {
-            margin-top: 2rem;
-            font-size: 0.9rem;
-            color: #7f8c8d;
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
         }
     </style>
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
 
-    <div class="container">
-
-        <header>
-            <h1>Welcome to My Website</h1>
-            <p>This is the main index page. Use the links below to navigate the site.</p>
-            
+    <div class="container mx-auto p-4 sm:p-6 lg:p-8">
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Learning From Building Systems</h1>
+            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Welcome to the main hub. Use the cards below to navigate to the different sections of the site.</p>
         </header>
 
-        <nav>
-            <ul>
-                <li><a href="management/index.html">Management Lessons</a></li>
-                <li><a href="management/estimation_time.html">Time Estimation</a></li>
-                <li><a href="management/article_time_estimation.html">Article on Time Estimation</a></li>
-                <li><a href="software/index.html">Software System</a></li>
-                <li><a href="systems/index.html">System Engineering</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Our Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
         <main>
-            <p>You can add more content here, like an introduction to your project or company.</p>
+            <!-- Section Links -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                
+                <!-- Card: Management -->
+                <a href="management/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-blue-700">Management Lessons</h3>
+                    <p class="text-gray-600">Explore frameworks and guides on risk, prioritization, and effort estimation.</p>
+                </a>
+
+                <!-- Card: Software System -->
+                <a href="software/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-green-700">Software Systems</h3>
+                    <p class="text-gray-600">Dive into articles and resources related to software architecture and design.</p>
+                </a>
+
+                <!-- Card: System Engineering -->
+                <a href="systems/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-purple-700">System Engineering</h3>
+                    <p class="text-gray-600">Learn about the principles of designing and managing complex engineering systems.</p>
+                </a>
+
+                <!-- Card: About Us -->
+                <a href="about.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-gray-700">About Us</h3>
+                    <p class="text-gray-600">Find out more about our mission and the team behind this project.</p>
+                </a>
+
+                <!-- Card: Services -->
+                <a href="services.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-gray-700">Our Services</h3>
+                    <p class="text-gray-600">Discover the services we offer to help you build better systems.</p>
+                </a>
+
+                <!-- Card: Contact -->
+                <a href="contact.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-gray-700">Contact</h3>
+                    <p class="text-gray-600">Get in touch with us for inquiries, support, or collaborations.</p>
+                </a>
+
+            </div>
         </main>
 
-        <footer>
-            <p>&copy; 2025 Your Name or Company. All Rights Reserved.</p>
+        <!-- Footer -->
+        <footer class="text-center mt-16 py-6 border-t border-gray-300">
+            <p class="text-gray-500">&copy; 2025 Learning From Building Systems. All Rights Reserved.</p>
         </footer>
-
     </div>
 
 </body>
