--- a/systems/index.html
+++ b/systems/index.html
@@ -36,7 +36,7 @@
             <h2 class="text-3xl font-bold text-center text-slate-900">Core Disciplines</h2>
             <p class="text-center mt-2 text-slate-600">Explore the foundational pillars of system engineering.</p>
             
-            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 
                 <!-- Module 1: Requirements Engineering (ACTIVE) -->
                 <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
@@ -63,6 +63,13 @@
                      <span class="mt-6 inline-block text-center bg-slate-300 text-slate-500 font-semibold py-3 px-6 rounded-lg cursor-not-allowed">
                         Coming Soon
                     </span>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
+                    <h3 class="text-xl font-bold text-slate-900">Testing Engineering</h3>
+                    <p class="mt-2 text-slate-600 flex-grow">The art of ensuring that system is working as expected by testing. This is the most critical phase for project success.</p>
+                    <a href="./testing.html" class="mt-6 inline-block text-center bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors duration-300">
+                        Start Testing
+                    </a>
                 </div>
 
             </div>
