--- a/systems/index.html
+++ b/systems/index.html
@@ -72,6 +72,14 @@
                     </a>
                 </div>
 
+                <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
+                    <h3 class="text-xl font-bold text-slate-900">Diagnosing Engineering</h3>
+                    <p class="mt-2 text-slate-600 flex-grow">The art of finding issue and fixing as reported by testing. This is the most critical phase for project success.</p>
+                    <a href="./diagnostics.html" class="mt-6 inline-block text-center bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors duration-300">
+                        Start Diagnosing
+                    </a>
+                </div>
+
             </div>
         </section>
 
