updated the structure

--- a/index.html
+++ b/index.html
@@ -28,47 +28,112 @@
         <!-- Header -->
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Learning From Building Systems</h1>
-            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Welcome to the main hub. Use the cards below to navigate to the different sections of the site.</p>
+            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">A comprehensive knowledge base of lessons learned from building complex systems across multiple disciplines.</p>
         </header>
+
+        <!-- Purpose Section -->
+        <section class="bg-white rounded-lg shadow-lg p-8 mb-12 max-w-4xl mx-auto">
+            <h2 class="text-2xl font-bold text-gray-900 mb-4">Why This Website?</h2>
+            <div class="text-gray-700 space-y-3">
+                <p>This website consolidates critical lessons and best practices learned from building complex systems. Key principles include:</p>
+                <ul class="list-disc list-inside space-y-2 ml-4">
+                    <li><strong>Debug before you build:</strong> Setup debugging infrastructure (loggers, testing benches) early - it improves development time exponentially</li>
+                    <li><strong>System resilience:</strong> Systems should not be able to kill themselves; external monitoring is required</li>
+                    <li><strong>Mocking and testing:</strong> Have comprehensive mocking systems to test your flows</li>
+                    <li><strong>State management:</strong> Think about initial states and end-of-life scenarios</li>
+                    <li><strong>Real-world constraints:</strong> Set thresholds for non-ideal systems and implement debouncing where needed</li>
+                    <li><strong>Input validation:</strong> Always verify data type, constraints, values, and sources</li>
+                    <li><strong>Simulation best practices:</strong> Ensure reproducibility, comprehensive logging, fast-forward capability, and accurate models</li>
+                </ul>
+            </div>
+        </section>
 
         <main>
             <!-- Section Links -->
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 
                 <!-- Card: Management -->
                 <a href="management/index.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-blue-700">Management Lessons</h3>
-                    <p class="text-gray-600">Explore frameworks and guides on risk, prioritization, and effort estimation.</p>
+                    <h3 class="font-bold text-xl mb-2 text-blue-700">Management</h3>
+                    <p class="text-gray-600">Frameworks and guides on risk assessment, prioritization, time estimation, and fire-fighting strategies.</p>
                 </a>
 
                 <!-- Card: Software System -->
                 <a href="software/index.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-green-700">Software Systems</h3>
-                    <p class="text-gray-600">Dive into articles and resources related to software architecture and design.</p>
+                    <h3 class="font-bold text-xl mb-2 text-green-700">Software</h3>
+                    <p class="text-gray-600">Software architecture, logging, web development, and system design principles.</p>
                 </a>
 
                 <!-- Card: System Engineering -->
                 <a href="systems/index.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-purple-700">System Engineering</h3>
-                    <p class="text-gray-600">Learn about the principles of designing and managing complex engineering systems.</p>
+                    <h3 class="font-bold text-xl mb-2 text-purple-700">Systems Engineering</h3>
+                    <p class="text-gray-600">Requirements, diagnostics, testing, and holistic system design approaches.</p>
                 </a>
 
-                <!-- Card: About Us -->
-                <a href="about.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-gray-700">About Us</h3>
-                    <p class="text-gray-600">Find out more about our mission and the team behind this project.</p>
+                <!-- Card: Electrical -->
+                <a href="electrical/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-yellow-700">Electrical</h3>
+                    <p class="text-gray-600">Hardware selection, electrical system design, and component integration.</p>
                 </a>
 
-                <!-- Card: Services -->
-                <a href="services.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-gray-700">Our Services</h3>
-                    <p class="text-gray-600">Discover the services we offer to help you build better systems.</p>
+                <!-- Card: Electronics -->
+                <a href="electronics/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-red-700">Electronics</h3>
+                    <p class="text-gray-600">Electronic circuit design, debugging techniques, and embedded systems.</p>
                 </a>
 
-                <!-- Card: Contact -->
-                <a href="contact.html" class="card block p-6">
-                    <h3 class="font-bold text-xl mb-2 text-gray-700">Contact</h3>
-                    <p class="text-gray-600">Get in touch with us for inquiries, support, or collaborations.</p>
+                <!-- Card: Mechanical -->
+                <a href="mechanical/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-orange-700">Mechanical</h3>
+                    <p class="text-gray-600">Mechanical design principles, debugging approaches, and testing methodologies.</p>
+                </a>
+
+                <!-- Card: Control Systems -->
+                <a href="control/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-indigo-700">Control Systems</h3>
+                    <p class="text-gray-600">Controller design, simulation, and control system implementation.</p>
+                </a>
+
+                <!-- Card: Testing -->
+                <a href="testing/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-pink-700">Testing</h3>
+                    <p class="text-gray-600">Testing strategies across software, electronics, mechanical, and system levels.</p>
+                </a>
+
+                <!-- Card: Quality -->
+                <a href="quality/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-teal-700">Quality</h3>
+                    <p class="text-gray-600">Quality assurance processes, standards, and best practices.</p>
+                </a>
+
+                <!-- Card: Production -->
+                <a href="production/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-cyan-700">Production</h3>
+                    <p class="text-gray-600">Manufacturing processes, production planning, and scaling systems.</p>
+                </a>
+
+                <!-- Card: People -->
+                <a href="people/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-amber-700">People</h3>
+                    <p class="text-gray-600">Team dynamics, communication, and organizational practices.</p>
+                </a>
+
+                <!-- Card: Finance -->
+                <a href="finance/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-emerald-700">Finance</h3>
+                    <p class="text-gray-600">Budget planning, cost estimation, and financial management.</p>
+                </a>
+
+                <!-- Card: Documentation -->
+                <a href="documentation/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-violet-700">Documentation</h3>
+                    <p class="text-gray-600">Documentation standards, technical writing, and knowledge management.</p>
+                </a>
+
+                <!-- Card: Proof of Concept -->
+                <a href="ProofOfConcept/index.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-lime-700">Proof of Concept</h3>
+                    <p class="text-gray-600">POC methodologies, rapid prototyping, and validation approaches.</p>
                 </a>
 
             </div>
