--- a/electrical/index.html
+++ b/electrical/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Electrical - Learning From Building Systems</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        .card {
+            background-color: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        }
+    </style>
+</head>
+<body class="bg-gray-100 text-gray-800">
+    <div class="container mx-auto p-4 sm:p-6 lg:p-8">
+        <!-- Back Link -->
+        <a href="../index.html" class="text-blue-600 hover:text-blue-800 mb-4 inline-block">&larr; Back to Home</a>
+        
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Electrical Systems</h1>
+            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Hardware selection, electrical system design, and component integration</p>
+        </header>
 
+        <main>
+            <!-- Section Links -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+                
+                <!-- Card: Selecting Hardware -->
+                <a href="selecting_hardware.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-yellow-700">Selecting Hardware</h3>
+                    <p class="text-gray-600">Guidelines and best practices for selecting appropriate hardware components for electrical systems.</p>
+                </a>
+
+            </div>
+
+            <div class="mt-8 p-6 bg-blue-50 border-l-4 border-blue-400 rounded">
+                <p class="text-sm text-blue-800">
+                    <strong>Note:</strong> More content will be added to this section soon.
+                </p>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center mt-16 py-6 border-t border-gray-300">
+            <p class="text-gray-500">Electrical Systems Resources</p>
+        </footer>
+    </div>
+</body>
+</html>
