--- a/finance/index.html
+++ b/finance/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Finance - Learning From Building Systems</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
+</head>
+<body class="bg-gray-100 text-gray-800">
+    <div class="container mx-auto p-4 sm:p-6 lg:p-8">
+        <!-- Back Link -->
+        <a href="../index.html" class="text-blue-600 hover:text-blue-800 mb-4 inline-block">&larr; Back to Home</a>
+        
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Finance</h1>
+            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Budget planning, cost estimation, and financial management</p>
+        </header>
 
+        <main class="bg-white rounded-lg shadow-lg p-8">
+            <h2 class="text-2xl font-semibold mb-4 text-emerald-700">Coming Soon</h2>
+            
+            <div class="prose max-w-none">
+                <p class="text-gray-700 mb-4">
+                    This section will cover financial management topics including:
+                </p>
+                <ul class="list-disc list-inside space-y-2 text-gray-700">
+                    <li>Budget planning and allocation</li>
+                    <li>Cost estimation methodologies</li>
+                    <li>Financial risk management</li>
+                    <li>ROI analysis and tracking</li>
+                    <li>Resource allocation optimization</li>
+                    <li>Financial reporting and metrics</li>
+                </ul>
+            </div>
+
+            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
+                <p class="text-sm text-yellow-800">
+                    <strong>Note:</strong> This section is under development. Content will be added soon.
+                </p>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center mt-16 py-6 border-t border-gray-300">
+            <p class="text-gray-500">Finance Resources</p>
+        </footer>
+    </div>
+</body>
+</html>
