--- a/management/index.html
+++ b/management/index.html
@@ -25,6 +25,9 @@
 <body class="bg-gray-100 text-gray-800">
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
+        <!-- Back Link -->
+        <a href="../index.html" class="text-blue-600 hover:text-blue-800 mb-4 inline-block">&larr; Back to Home</a>
+        
         <!-- Header -->
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Project Management Hub</h1>
