--- a/software/index.html
+++ b/software/index.html
@@ -3,57 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Main Page</title>
+    <title>Software Systems - Learning From Building Systems</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
         }
+        .card {
+            background-color: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 text-gray-800">
+    <div class="container mx-auto p-4 sm:p-6 lg:p-8">
+        <!-- Back Link -->
+        <a href="../index.html" class="text-blue-600 hover:text-blue-800 mb-4 inline-block">&larr; Back to Home</a>
+        
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Software Systems</h1>
+            <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Software architecture, logging, web development, and system design principles</p>
+        </header>
 
-    <header class="bg-white shadow-md">
-        <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold leading-tight text-gray-900">
-                Project Dashboard
-            </h1>
-        </div>
-    </header>
+        <main>
+            <!-- Section Links -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+                
+                <!-- Card: Logging -->
+                <a href="logging.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-green-700">Logging Architecture</h3>
+                    <p class="text-gray-600">An in-depth, interactive guide to the architecture of modern logging systems. Explore core concepts, compare implementations, and understand the critical challenges of concurrency.</p>
+                </a>
 
-    <main>
-        <div class="max-w-7xl mx-auto py-12 sm:px-6 lg:px-8">
-            <div class="px-4 py-8 sm:px-0">
-                <div class="bg-white rounded-lg shadow-xl overflow-hidden">
-                    <div class="p-6">
-                        <h2 class="text-2xl font-bold text-gray-800">Interactive Logging Guide</h2>
-                        <p class="mt-2 text-gray-600">
-                            An in-depth, interactive guide to the architecture of modern logging systems. Explore core concepts, compare implementations, and understand the critical challenges of concurrency.
-                        </p>
-                        <div class="mt-6">
-                            <button onclick="window.open('webdev_browser_execution.html', '_blank')" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors">
-                                Web Browser Guide
-                                <svg class="ml-3 -mr-1 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
-                                    <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
-                                </svg>
-                            </button>
-                            <button onclick="window.open('logging.html', '_blank')" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors">
-                                Launch Interactive Guide
-                                <svg class="ml-3 -mr-1 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
-                                    <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                <!-- Card: Web Browser Execution -->
+                <a href="webdev_browser_execution.html" class="card block p-6">
+                    <h3 class="font-bold text-xl mb-2 text-green-700">Web Browser Execution</h3>
+                    <p class="text-gray-600">Understanding how code executes in web browsers, the event loop, and browser internals for better web development.</p>
+                </a>
+
             </div>
-        </div>
-    </main>
+        </main>
 
+        <!-- Footer -->
+        <footer class="text-center mt-16 py-6 border-t border-gray-300">
+            <p class="text-gray-500">Software Systems Resources</p>
+        </footer>
+    </div>
 </body>
 </html>
