--- a/systems/index.html
+++ b/systems/index.html
@@ -23,9 +23,12 @@
 
     <!-- Header Section -->
     <header class="bg-white shadow-sm">
-        <div class="container mx-auto px-6 py-12 text-center">
-            <h1 class="text-4xl md:text-5xl font-bold tracking-tight text-slate-900">Learning from <span class="gradient-text">System Engineering</span></h1>
-            <p class="mt-4 text-lg text-slate-600 max-w-3xl mx-auto">Applying structured engineering principles to build robust, efficient, and successful systems. This portal explores the core concepts that drive effective project development.</p>
+        <div class="container mx-auto px-6 py-12">
+            <a href="../index.html" class="text-blue-600 hover:text-blue-800 mb-4 inline-block">&larr; Back to Home</a>
+            <div class="text-center">
+                <h1 class="text-4xl md:text-5xl font-bold tracking-tight text-slate-900">Learning from <span class="gradient-text">System Engineering</span></h1>
+                <p class="mt-4 text-lg text-slate-600 max-w-3xl mx-auto">Applying structured engineering principles to build robust, efficient, and successful systems. This portal explores the core concepts that drive effective project development.</p>
+            </div>
         </div>
     </header>
 
