--- a/control/index.html
+++ b/control/index.html
@@ -22,20 +22,14 @@
         </header>
 
         <!-- Content -->
-        <main class="bg-white rounded-lg shadow-lg p-8">
-            <h2 class="text-2xl font-semibold mb-4 text-indigo-700">Available Resources</h2>
+        <main>
+            <h2 class="text-2xl font-semibold mb-6 text-indigo-700">Available Resources</h2>
             
-            <div class="space-y-4">
-                <a href="controller_sim.html" class="block p-4 border border-gray-200 rounded-lg hover:bg-gray-50 transition">
-                    <h3 class="font-semibold text-lg text-gray-900">Controller Simulation</h3>
-                    <p class="text-gray-600 mt-1">Interactive controller simulation tools and examples</p>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <a href="controller_sim.html" class="block p-6 bg-white rounded-lg shadow-lg hover:shadow-xl transition-shadow">
+                    <h3 class="font-bold text-xl mb-2 text-indigo-700">Controller Simulation</h3>
+                    <p class="text-gray-600">Interactive controller simulation tools and examples</p>
                 </a>
-            </div>
-
-            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-                <p class="text-sm text-yellow-800">
-                    <strong>Note:</strong> This section is under development. More content will be added soon.
-                </p>
             </div>
         </main>
     </div>
