--- a/finance/index.html
+++ b/finance/index.html
@@ -23,26 +23,10 @@
             <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Budget planning, cost estimation, and financial management</p>
         </header>
 
-        <main class="bg-white rounded-lg shadow-lg p-8">
-            <h2 class="text-2xl font-semibold mb-4 text-emerald-700">Coming Soon</h2>
-            
-            <div class="prose max-w-none">
-                <p class="text-gray-700 mb-4">
-                    This section will cover financial management topics including:
-                </p>
-                <ul class="list-disc list-inside space-y-2 text-gray-700">
-                    <li>Budget planning and allocation</li>
-                    <li>Cost estimation methodologies</li>
-                    <li>Financial risk management</li>
-                    <li>ROI analysis and tracking</li>
-                    <li>Resource allocation optimization</li>
-                    <li>Financial reporting and metrics</li>
-                </ul>
-            </div>
-
-            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-                <p class="text-sm text-yellow-800">
-                    <strong>Note:</strong> This section is under development. Content will be added soon.
+        <main>
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <p class="text-gray-600 text-center">
+                    No resources available yet. Content will be added as it becomes available.
                 </p>
             </div>
         </main>
