--- a/software/index.html
+++ b/software/index.html
@@ -34,7 +34,8 @@
         </header>
 
         <main>
-            <!-- Section Links -->
+            <h2 class="text-2xl font-semibold mb-6 text-green-700">Available Resources</h2>
+            
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 
                 <!-- Card: Logging -->
