--- a/ProofOfConcept/index.html
+++ b/ProofOfConcept/index.html
@@ -22,27 +22,10 @@
         </header>
 
         <!-- Content -->
-        <main class="bg-white rounded-lg shadow-lg p-8">
-            <h2 class="text-2xl font-semibold mb-4 text-lime-700">Coming Soon</h2>
-            
-            <div class="prose max-w-none">
-                <p class="text-gray-700 mb-4">
-                    This section will cover proof of concept development including:
-                </p>
-                <ul class="list-disc list-inside space-y-2 text-gray-700">
-                    <li>POC planning and scope definition</li>
-                    <li>Rapid prototyping techniques</li>
-                    <li>Validation and success criteria</li>
-                    <li>Risk identification through POCs</li>
-                    <li>Minimum viable product (MVP) strategies</li>
-                    <li>Transitioning from POC to production</li>
-                    <li>Documentation and learning capture</li>
-                </ul>
-            </div>
-
-            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-                <p class="text-sm text-yellow-800">
-                    <strong>Note:</strong> This section is under development. Content will be added soon.
+        <main>
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <p class="text-gray-600 text-center">
+                    No resources available yet. Content will be added as it becomes available.
                 </p>
             </div>
         </main>
