--- a/documentation/index.html
+++ b/documentation/index.html
@@ -22,27 +22,10 @@
         </header>
 
         <!-- Content -->
-        <main class="bg-white rounded-lg shadow-lg p-8">
-            <h2 class="text-2xl font-semibold mb-4 text-violet-700">Coming Soon</h2>
-            
-            <div class="prose max-w-none">
-                <p class="text-gray-700 mb-4">
-                    This section will cover documentation best practices including:
-                </p>
-                <ul class="list-disc list-inside space-y-2 text-gray-700">
-                    <li>Technical writing standards</li>
-                    <li>API documentation best practices</li>
-                    <li>User manuals and guides</li>
-                    <li>Architecture documentation</li>
-                    <li>Knowledge management systems</li>
-                    <li>Documentation tools and workflows</li>
-                    <li>Maintaining living documentation</li>
-                </ul>
-            </div>
-
-            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-                <p class="text-sm text-yellow-800">
-                    <strong>Note:</strong> This section is under development. Content will be added soon.
+        <main>
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <p class="text-gray-600 text-center">
+                    No resources available yet. Content will be added as it becomes available.
                 </p>
             </div>
         </main>
