--- a/electrical/index.html
+++ b/electrical/index.html
@@ -34,7 +34,8 @@
         </header>
 
         <main>
-            <!-- Section Links -->
+            <h2 class="text-2xl font-semibold mb-6 text-yellow-700">Available Resources</h2>
+            
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 
                 <!-- Card: Selecting Hardware -->
@@ -43,12 +44,6 @@
                     <p class="text-gray-600">Guidelines and best practices for selecting appropriate hardware components for electrical systems.</p>
                 </a>
 
-            </div>
-
-            <div class="mt-8 p-6 bg-blue-50 border-l-4 border-blue-400 rounded">
-                <p class="text-sm text-blue-800">
-                    <strong>Note:</strong> More content will be added to this section soon.
-                </p>
             </div>
         </main>
 
