--- a/testing/index.html
+++ b/testing/index.html
@@ -22,27 +22,10 @@
         </header>
 
         <!-- Content -->
-        <main class="bg-white rounded-lg shadow-lg p-8">
-            <h2 class="text-2xl font-semibold mb-4 text-pink-700">Coming Soon</h2>
-            
-            <div class="prose max-w-none">
-                <p class="text-gray-700 mb-4">
-                    This section will cover comprehensive testing approaches including:
-                </p>
-                <ul class="list-disc list-inside space-y-2 text-gray-700">
-                    <li>Software testing methodologies (unit, integration, system)</li>
-                    <li>Hardware testing benches and procedures</li>
-                    <li>Mechanical component testing</li>
-                    <li>System-level integration testing</li>
-                    <li>Test automation strategies</li>
-                    <li>Mocking and simulation for testing</li>
-                    <li>Test coverage and quality metrics</li>
-                </ul>
-            </div>
-
-            <div class="mt-8 p-6 bg-yellow-50 border-l-4 border-yellow-400 rounded">
-                <p class="text-sm text-yellow-800">
-                    <strong>Note:</strong> This section is under development. Content will be added soon.
+        <main>
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <p class="text-gray-600 text-center">
+                    No resources available yet. Content will be added as it becomes available.
                 </p>
             </div>
         </main>
