added profile links

--- a/index.html
+++ b/index.html
@@ -182,11 +182,9 @@
         <footer class="mt-16 py-8 border-t-2 border-gray-200">
             <div class="text-center space-y-4">
                 <div class="flex justify-center items-center gap-8 text-sm text-gray-600">
-                    <a href="#" class="hover:text-blue-600 transition">About</a>
+                    <a href="https://www.linkedin.com/in/vi-ku/" class="hover:text-blue-600 transition">LinkedIn</a>
                     <span>•</span>
-                    <a href="https://github.com" class="hover:text-blue-600 transition">GitHub</a>
-                    <span>•</span>
-                    <a href="#" class="hover:text-blue-600 transition">RSS Feed</a>
+                    <a href="https://github.com/Vi-Ku" class="hover:text-blue-600 transition">GitHub</a>
                 </div>
                 <p class="text-gray-500 text-sm">📚 A living repository of lessons learned · Updated continuously</p>
                 <p class="text-gray-400 text-xs">&copy; 2025-∞ Learning From Building Systems</p>
